@@ -6,8 +6,9 @@ Revision history for Perl extension Metabrik.
    - FEATURE: core::context: allow to pass Code, ARRAY or HASH as Argument to set Command
    - FEATURE: core::global: repository Attribute to store default Briks repository
    - UPDATE: Metabrik: brik_preinit, brik_init and brik_fini are now official Commands
-   - bugfix: shell::rc, shell::script: add a trailing whitespace on multilines
    - new: perl::module: use_test Attribute to activate test on module installation
+   - new: Metabrik: brik_help_run_undef_arg and brik_help_run_invalid_arg Commands
+   - bugfix: shell::rc, shell::script: add a trailing whitespace on multilines
    - update: perl::module: install correctly supports ARRAY of modules to install
 
 1.11 Sun Nov 22 17:46:43 CET 2015
